packages/core/.storybook/public/preview.css
@import '@cds/city/css/bundles/default.min.css';
@import 'modern-normalize/modern-normalize.css';
@import './../../dist/core/global.css';
@import './../../dist/core/styles/theme.dark.css';
@import './../../dist/core/styles/theme.low-motion.css';
@import './../../dist/core/list/list.css';
@import './../../dist/core/table/table.css';

html {
  overflow-x: hidden;
}

body {
  box-sizing: border-box !important; /* storybook v6 inline to initial */
}

body.sb-main-padded {
  padding: var(--cds-global-layout-space-lg);
}

#root #root-inner cds-grid {
  max-width: 1000px;
}

/* Demo Components */
cds-demo {
  display: block;
}

cds-demo[layout],
.layout-demo {
  background: var(--cds-global-color-cool-gray-300);
  overflow: hidden;
  display: inline-block;
}

cds-demo[layout][tall] > [cds-layout],
.layout-demo.tall-demo > cds-layout {
  min-height: 300px;
}

cds-demo[popover] {
  min-height: 400px;
  position: relative;
}

cds-demo[layout][wide],
.layout-demo.wide-demo {
  width: 100%;
  display: block;
}

cds-demo[placeholder],
cds-placeholder {
  display: flex;
  justify-content: center;
  align-items: center;
  background: var(--cds-global-color-cool-gray-700);
  color: var(--cds-global-color-gray-0);
  font-size: var(--cds-global-typography-body-font-size);
  min-width: 50px;
  min-height: 50px;
}

cds-demo[inverse] {
  background: var(--cds-global-color-construction-800);
}

cds-demo[inline-block] {
  display: inline-block;
}

cds-demo[spacing-padding] cds-placeholder {
  padding: 0;
}

cds-demo[spacing-padding] > [cds-layout] {
  background: hsl(92, 46%, 74%);
}

cds-demo[spacing-margin] > div {
  background: hsl(31, 87%, 79%);
}

cds-demo[resizable],
iframe[resizable] {
  resize: horizontal;
  overflow: auto;
  padding: 24px;
  background: linear-gradient(
    135deg,
    var(--cds-alias-object-app-background) 0,
    var(--cds-alias-object-app-background) 97%,
    hsl(208, 52%, 85%) 90%
  );
  border: 1px solid hsl(0, 0%, 87%);
  margin-bottom: 48px;
  position: relative;
}

iframe[resizable] {
  padding: 0;
}

.docs-story div {
  /* forcing storybook to not add transforms on their story blocks. it was messing up modal/overlay/dropdown demos */
  transform: none !important;
}

pre.prismjs {
  background: var(--cds-global-color-gray-50) !important;
}

.docs-story > div:last-child button {
  background: var(--cds-alias-object-container-background) !important;
  color: var(--cds-global-typography-color-500) !important;
  border-radius: 0;
}

.docs-story [id*='story--'],
[id*='--dark-theme'] [cds-theme] {
  padding: 36px 24px;
}

[id*='--dark-theme']:not(a) {
  padding: 0;
}

.sb-inline-icon {
  width: 16px;
  color: #ccc;
}

.demo-layout {
  margin: -20px;
}

.sbdocs .demo-layout {
  box-shadow: 0.05rem 0.1rem 0.3rem 0.3rem hsl(198, 0%, 80%);
  margin: 0;
}

.demo-app-layout {
  height: 100vh;
  overflow: hidden;
}

.demo-divider {
  --color: var(--cds-global-color-gray-500);
}

.demo-header {
  background: var(--cds-global-color-blue-1000);
  color: var(--cds-global-color-gray-0);
}

.demo-sidenav,
.demo-content {
  background: var(--cds-global-color-gray-200);
}

.demo-footer {
  background: var(--cds-global-color-gray-0);
  color: var(--cds-global-color-gray-700);
  box-shadow: 0 0.05rem 0 hsl(198, 0%, 70%) inset;
}

.demo-sidenav {
  background: var(--cds-global-color-gray-200);
  box-shadow: -0.05rem 0 0 rgba(0, 0, 0, 0.2) inset;
  width: 25%;
}

.demo-sidebar {
  background: var(--cds-global-color-gray-100);
  width: 25%;
}

.demo-subnav {
  background: var(--cds-global-color-gray-0);
  box-shadow: 0 -0.05rem 0 hsl(198, 0%, 70%) inset;
}

.demo-alt-header cds-icon,
.demo-alt-header-2 cds-icon {
  opacity: 0.6;
}

.demo-alt-header cds-icon:first-child,
.demo-alt-header-2 cds-icon:first-child {
  opacity: 1;
}

.demo-scrollable-content {
  overflow-y: auto;
  justify-content: start;
  align-items: start;
  padding: 12px;
  height: 100%;
}

.demo-alt-header,
.demo-alt-header-2 {
  width: 60px !important;
}

.demo-alt-header cds-icon,
.demo-alt-header-2 cds-icon {
  --color: var(--cds-global-color-gray-0);
}

.demo-alt-header-2 {
  background: var(--cds-global-color-gray-900);
}

.demo-alt-content {
  background: var(--cds-global-color-gray-0);
}

.demo-alt-content-header {
  background: var(--cds-global-color-gray-0);
  color: var(--cds-global-color-gray-700);
  box-shadow: 0 -0.05rem 0 hsl(198, 0%, 70%) inset;
}

#story--stories-themes--dynamic-theme > div {
  min-height: 650px !important;
}

#story--foundation-design-tokens-stories--interaction > div {
  min-height: 450px !important;
}

@keyframes slide-demo {
  0% {
    left: 0;
  }

  50% {
    left: calc(100% - 25px);
  }

  100% {
    left: 0;
  }
}

.animation {
  animation: slide-demo var(--duration);
  animation-timing-function: var(--easing);
  animation-iteration-count: infinite;
  animation-delay: 500ms;
  background: var(--cds-alias-status-neutral);
  width: 25px;
  height: 50px;
  position: absolute;
  left: 0;
}

.animation-demo {
  --duration: var(--cds-global-animation-duration-primary);
  border: var(--cds-alias-object-border-width-100) solid var(--cds-alias-object-border-color);
  width: 200px;
  height: 50px;
  overflow: hidden;
  position: relative;
}

.animation-demo:not(:hover) {
  --duration: 0 !important;
}

